Make tar file generation optional
tar_scm.service is very useful to manage source in OBS but
unfortunatly if you want to store packaging files in a git (not the
package source) the service will extract file(s) and generate
useless tar ball file.

Add an option to disable tar file generation.

Signed-off-by: Ronan Le Martret <ronan.lemartret@iot.bzh>

--- a/tar_scm.service.in
+++ b/tar_scm.service.in
@@ -164,6 +164,11 @@
     <description>Specify a file/glob to be exported directly. Useful for build descriptions like spec files
 which get maintained in the SCM. Can be used multiple times.</description>
   </parameter>
+  <parameter name="tar-generation">
+    <description>Generate an tar file. Default is 'enable'.</description>
+    <allowedvalue>enable</allowedvalue>
+    <allowedvalue>disable</allowedvalue>
+  </parameter>
   <parameter name="package-meta">
     <description>Package the metadata of SCM to allow the user or OBS to update after un-tar.</description>
     <allowedvalue>yes</allowedvalue>
