--- a/tar_scm.service.in
+++ b/tar_scm.service.in
@@ -148,6 +148,9 @@
        * the first tag that is reachable via git describe on the default branch: @PARENT_TAG@
     </description>
   </parameter>
+  <parameter name="clone-dir-name">
+    <description>Specify the name of the local clone directory.</description>
+  </parameter>
   <parameter name="filename">
     <description>Specify name of package, which is used together with version to determine tarball name.</description>
   </parameter>
