--- a/tar_scm.service.in
+++ b/tar_scm.service.in
@@ -158,14 +158,14 @@
     <description>Specify suffix name of package, which is used together with filename to determine tarball name.</description>
   </parameter>
   <parameter name="exclude">
-    <description>Specify glob pattern to exclude when creating the tarball.</description>
+    <description>Specify glob pattern to exclude when creating the tarball or extract files.</description>
   </parameter>
   <parameter name="include">
     <description>Specify subset of files/subdirectories to pack in the tarball.</description>
   </parameter>
   <parameter name="extract">
     <description>Specify a file/glob to be exported directly. Useful for build descriptions like spec files
-which get maintained in the SCM. Can be used multiple times.</description>
+which get maintained in the SCM. Can be used multiple times. Can be use with exclude.</description>
   </parameter>
   <parameter name="tar-generation">
     <description>Generate an tar file. Default is 'enable'.</description>
